--- a/HackCU V/poker_game.css
+++ b/HackCU V/poker_game.css
@@ -14,11 +14,11 @@
 
 /* Pot */
 .row1 {
-	padding-top: 125px;
+	padding-bottom: 125px;
 	margin-left: 315px;
-	margin-top: 35px;
+	margin-top: 20px;
 	width: 35%;
-	border-radius: 50%;
+	
 	background-color: rgba(0,0,0,0.4);
 	color: white;
 	text-align: : center;
